# api-cache

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
api_cache/: __init__.py
examples/: demo.py
tests/: test_cache.py
