[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "api-cache"
version = "0.1.0"
description = "Rate-limited API client with disk caching. Sliding window throttle, MD5-keyed cache, configurable TTL."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Protectyr Labs" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

[project.optional-dependencies]
cache = ["diskcache>=5.0"]
dev = ["pytest>=7.0", "diskcache>=5.0"]

[project.urls]
Homepage = "https://github.com/protectyr-labs/api-cache"
Repository = "https://github.com/protectyr-labs/api-cache"
Issues = "https://github.com/protectyr-labs/api-cache/issues"

[tool.setuptools.packages.find]
include = ["api_cache*"]
